WebCore/rendering/FixedTableLayout.cpp
@@ -128,6 +128,7 @@ int FixedTableLayout::calcWidthArray(int)
                     currentEffectiveColumn++;
                 }
             }
+            static_cast<RenderTableCol*>(child)->calcPrefWidths();
         } else
             break;
 
