WebCore/rendering/RenderTable.cpp
@@ -285,6 +285,9 @@ void RenderTable::layout()
             if (collapsing)
                 section->recalcOuterBorder();
             ASSERT(!section->needsLayout());
+        } else if (child->isTableCol()) {
+            child->layoutIfNeeded();
+            ASSERT(!child->needsLayout());
         }
     }
 
