WebCore/rendering/RenderTableCol.cpp
@@ -75,11 +75,8 @@ IntRect RenderTableCol::clippedOverflowRectForRepaint(RenderBoxModelObject* repa
     // FIXME: Find a better way to do this, e.g., need to repaint all the cells that we
     // might have propagated a background color or borders into.
     // FIXME: check for repaintContainer each time here?
-    RenderObject* table = parent();
-    if (table && !table->isTable())
-        table = table->parent();
-    if (table && table->isTable())
-        return table->clippedOverflowRectForRepaint(repaintContainer);
+    if (RenderObject* parentTable = table())
+        return parentTable->clippedOverflowRectForRepaint(repaintContainer);
 
     return IntRect();
 }
@@ -88,6 +85,22 @@ void RenderTableCol::imageChanged(WrappedImagePtr, const IntRect*)
 {
     // FIXME: Repaint only the rect the image paints in.
     repaint();
+}
+
+void RenderTableCol::calcPrefWidths()
+{
+    setPrefWidthsDirty(false);
+
+    for (RenderObject* child = firstChild(); child; child = child->nextSibling())
+        child->setPrefWidthsDirty(false);
+}
+
+RenderTable* RenderTableCol::table() const
+{
+    RenderObject* table = parent();
+    if (table && !table->isTable())
+        table = table->parent();
+    return table && table->isTable() ? static_cast<RenderTable*>(table) : 0;
 }
 
 }
