WebCore/rendering/RenderTableCol.h
@@ -29,6 +29,7 @@
 #define RenderTableCol_h
 
 #include "RenderBox.h"
+#include "RenderTable.h"
 
 namespace WebCore {
 
@@ -54,10 +55,14 @@ public:
     virtual IntRect clippedOverflowRectForRepaint(RenderBoxModelObject* repaintContainer);
     virtual void imageChanged(WrappedImagePtr, const IntRect* = 0);
 
+    virtual void calcPrefWidths();
+
     int span() const { return m_span; }
     void setSpan(int s) { m_span = s; }
-    
+
 private:
+    RenderTable* table() const;
+
     RenderObjectChildList m_children;
     int m_span;
 };
